--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textSize="30dp"
             android:text="K10" />
 
         <Button
@@ -22,42 +23,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textSize="30dp"
             android:text="K100" />
 
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-
-        <Button
-            android:id="@+id/x1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="x1" />
-
-        <Button
-            android:id="@+id/x2"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="x2" />
-
-        <Button
-            android:id="@+id/x3"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="x3" />
-        
-        <Button
-            android:id="@+id/x4"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="x4" />
     </LinearLayout>
 
 
@@ -81,7 +50,7 @@
    -->
 
 	<Button
-	    android:id = "@+id/liczba10"
+	    android:id = "@+id/liczba1"
 	    android:background="@drawable/empty_d10"
 	    android:layout_width="160dp"
 	    android:layout_height="160dp"
@@ -91,7 +60,35 @@
 	    android:textSize = "50dp"/>
 
 	<Button
-	    android:id="@+id/liczba1"
+	    android:id="@+id/liczba10"
+	    android:layout_width="160dp"
+	    android:layout_height="160dp"
+	    android:background="@drawable/empty_d10"
+	    android:gravity="center"
+	    android:text="100"
+	    android:textColor="#ffffff"
+	    android:textSize="50dp" />
+	
+	</LinearLayout>
+	
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">	
+        
+        
+	<Button
+	    android:id="@+id/liczba2"
+	    android:layout_width="160dp"
+	    android:layout_height="160dp"
+	    android:background="@drawable/empty_d10"
+	    android:gravity="center"
+	    android:text="100"
+	    android:textColor="#ffffff"
+	    android:textSize="50dp" />
+		
+	<Button
+	    android:id="@+id/liczba20"
 	    android:layout_width="160dp"
 	    android:layout_height="160dp"
 	    android:background="@drawable/empty_d10"
