--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/K10"
+            android:id="@+id/przyciskK10"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -19,7 +19,7 @@
             android:text="K10" />
 
         <Button
-            android:id="@+id/K100"
+            android:id="@+id/przyciskK100"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -38,17 +38,6 @@
         android:orientation="horizontal">
 
 
-    <!--  
-    <TextView
-        android:id="@+id/liczby"
-        android:layout_width="303dp"
-        android:layout_height="213dp"
-        android:layout_gravity="center"
-        android:textColor= "#FF0000"
-        android:text="100 100 100 100"
-        android:textSize="50dp" />
-   -->
-
 	<Button
 	    android:id = "@+id/liczba1"
 	    android:background="@drawable/empty_d10"
@@ -56,7 +45,8 @@
 	    android:layout_height="160dp"
 	    android:gravity="center"
 	    android:textColor="#ffffff"
-	    android:text = "100"
+	    android:text = "K10"
+	    android:visibility="invisible"
 	    android:textSize = "50dp"/>
 
 	<Button
@@ -65,8 +55,9 @@
 	    android:layout_height="160dp"
 	    android:background="@drawable/empty_d10"
 	    android:gravity="center"
-	    android:text="100"
+	    android:text="K10"
 	    android:textColor="#ffffff"
+	    android:visibility="invisible"
 	    android:textSize="50dp" />
 	
 	</LinearLayout>
@@ -83,8 +74,9 @@
 	    android:layout_height="160dp"
 	    android:background="@drawable/empty_d10"
 	    android:gravity="center"
-	    android:text="100"
+	    android:text="K10"
 	    android:textColor="#ffffff"
+	    android:visibility="invisible"
 	    android:textSize="50dp" />
 		
 	<Button
@@ -93,8 +85,9 @@
 	    android:layout_height="160dp"
 	    android:background="@drawable/empty_d10"
 	    android:gravity="center"
-	    android:text="100"
+	    android:text="K10"
 	    android:textColor="#ffffff"
+	    android:visibility="invisible"
 	    android:textSize="50dp" />
 	
     </LinearLayout>
@@ -104,6 +97,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:textSize="20dp"
         android:text="Rzucaj" />
 
 </LinearLayout>
